--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                         </div>
                     </div>
                     <h2>UI/UX Designer</h2>
+                    <h2><strong>Curriculum vitae </strong></h2>
                     <a href="assets/cv.pdf"><i>download pdf here</i></a>
                 </div><!-- Title end-->
 
