--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                     <h2>UI/UX Designer</h2>
                     <h2><strong>Curriculum vitae </strong></h2>
-                    <a href="cv/kai_cv.docx"><i>download pdf here</i></a>
+                    <a href="cv/kevin_cv.pdf"><i>download pdf here</i></a>
                 </div><!-- Title end-->
 
                 <!-- ===========================
