--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         ============================ -->
         <div id="header" class="row">
             <div class="col-sm-2">
-                <img class="propic" src="img/bappy.jpg" alt="">
+                <img class="propic" src="img/DSC_1654.JPG" alt="">
             </div>
             <!-- photo end-->
 
@@ -80,8 +80,7 @@
                         </div>
                     </div>
                     <h2>UI/UX Designer</h2>
-                    <h2><strong>Curriculum vitae </strong></h2>
-                    <a href="cv/kevin_cv.pdf"><i>download pdf here</i></a>
+                    <a href="cv/kevin_cv.pdf" nowrap><i>Curriculum vitae</i></a>
                 </div><!-- Title end-->
 
                 <!-- ===========================
