--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- ===========================
     SITE TITLE
     =========================== -->
-    <title>CVstrap - Free Bootstrap CV Template by EvenFly</title>
+    <title>Welcome to Kevin Ling's homepage</title>
 
     <!-- ===========================
     FAVICONS
@@ -45,6 +45,12 @@
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        a:link {color:#FF0000;}
+        a:visited {color:#00FF00;}
+        a:hover {color:#FF00FF;}
+        a:active {color:#0000FF;}
+    </style>
 </head>
 
 <body>
@@ -62,7 +68,8 @@
                 <div class="cv-title">
                     <div class="row">
                         <div class="col-sm-7">
-                            <h1>Towkir A. Bappy</h1>
+                            <h1Kevin Ling</h1>
+                            <a href="cv/kevin_cv.pdf" ><i>Curriculum vitae</i></a>
                         </div>
                         <div class="col-sm-5 text-right dl-share">
                             <!-- AddToAny BEGIN -->
@@ -80,7 +87,6 @@
                         </div>
                     </div>
                     <h2>UI/UX Designer</h2>
-                    <a href="cv/kevin_cv.pdf" nowrap><i>Curriculum vitae</i></a>
                 </div><!-- Title end-->
 
                 <!-- ===========================
@@ -372,7 +378,7 @@
     FOOTER
     =========================== -->
     <footer class="text-center">
-        <p>&copy; <a href="http://creativecommons.org/licenses/by/3.0/">CC-3.0</a>, Just another CV template by <a href="https://evenfly.com">EvenFly </a> - Designed by <a target="_blank" href="http://www.facebook.com/towkirahmedbappy">Towkir Ahmed Bappy</a>.
+        <p>&copy; 2018 keviniling.github.io | More at <a href="https://github.com/keviniling" target="_blank" title="git">github mainpage</a> .
         </p>
     </footer>
 
