--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="cv-title">
                     <div class="row">
                         <div class="col-sm-7">
-                            <h1Kevin Ling</h1>
+                            <h1>Kevin Ling</h1>
                             <a href="cv/kevin_cv.pdf" ><i>Curriculum vitae</i></a>
                         </div>
                         <div class="col-sm-5 text-right dl-share">
@@ -106,7 +106,7 @@
 
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href=""><span class="social fa fa-facebook"></span>Facebook</a>
+                            <li><a href="https://www.facebook.com/keviniling"><span class="social fa fa-facebook"></span>Facebook</a>
                             </li>
                             <li><a href=""><span class="social fa fa-twitter"></span>Twitter</a>
                             </li>
