--- a/index.html
+++ b/index.html
@@ -95,11 +95,9 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href=""><span class="social fa fa-home"></span>EvenFly.com</a>
+                            <li><a href=""skype:keviniling"><span class="social fa fa-skype"></span>+86 131 0071 0797</a>
                             </li>
-                            <li><a href=""><span class="social fa fa-skype"></span>+88 0123 45678</a>
-                            </li>
-                            <li><a href="mailto:support@evenfly.com"><span class="social fa fa-envelope-o"></span>me@mail.com</a>
+                            <li><a href="mailto:keviniling@outlook.com"><span class="social fa fa-envelope-o"></span>me@mail.com</a>
                             </li>
                         </ul>
                     </div><!-- social 1st col end-->
@@ -108,20 +106,16 @@
                         <ul class="list-unstyled">
                             <li><a href="https://www.facebook.com/keviniling"><span class="social fa fa-facebook"></span>Facebook</a>
                             </li>
-                            <li><a href=""><span class="social fa fa-twitter"></span>Twitter</a>
-                            </li>
-                            <li><a href=""><span class="social fa fa-linkedin"></span>Linkedin</a>
+                            <li><a href="https://twitter.com/KevinLi36350077"><span class="social fa fa-twitter"></span>Twitter</a>
                             </li>
                         </ul>
                     </div><!-- social 2nd col end-->
 
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href=""><span class="social fa fa-behance"></span>Behance</a>
+                            <li><a href="https://www.instagram.com/keviniling/"><span class="social fa fa-instagram"></span>Instagram</a>
                             </li>
-                            <li><a href=""><span class="social fa fa-dribbble"></span>Dribbble</a>
-                            </li>
-                            <li><a href=""><span class="social fa fa-instagram"></span>Instagram</a>
+                            <li><a href="https://www.linkedin.com/in/kevin-ling-540629117/"><span class="social fa fa-linkedin"></span>Linkedin</a>
                             </li>
                         </ul>
                     </div><!-- social 3rd col end-->
