--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href=""skype:keviniling"><span class="social fa fa-skype"></span>+86 131 0071 0797</a>
+                            <li><a href=""skype:live:keviniling"><span class="social fa fa-skype"></span>+86 131 0071 0797</a>
                             </li>
                             <li><a href="mailto:keviniling@outlook.com"><span class="social fa fa-envelope-o"></span>me@mail.com</a>
                             </li>
