--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <![endif]-->
     <style>
         a:link {color:#FF0000;}
-        a:visited {color:#00FF00;}
+        a:visited {color:#0000FF;}
         a:hover {color:#FF00FF;}
-        a:active {color:#0000FF;}
+        a:active {color:#00FF00;}
     </style>
 </head>
 
@@ -69,7 +69,6 @@
                     <div class="row">
                         <div class="col-sm-7">
                             <h1>Kevin Ling</h1>
-                            <a href="cv/kevin_cv.pdf" ><i>Curriculum vitae</i></a>
                         </div>
                         <div class="col-sm-5 text-right dl-share">
                             <!-- AddToAny BEGIN -->
@@ -83,7 +82,7 @@
                             <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
                             <!-- AddToAny END -->
 
-                            <a class="btn btn-success" href=""><span class="fa fa-download"></span> Download</a>
+                            <a class="btn btn-success" href="cv/kevin_cv.pdf"><span class="fa fa-download"></span>Curriculum Vitae</a>
                         </div>
                     </div>
                     <h2>UI/UX Designer</h2>
