--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
-        a:link {color:#FF0000;}
-        a:visited {color:#0000FF;}
-        a:hover {color:#FF00FF;}
-        a:active {color:#00FF00;}
-    </style>
+    <!--<style>-->
+        <!--a:link {color:#FF0000;}-->
+        <!--a:visited {color:#0000FF;}-->
+        <!--a:hover {color:#FF00FF;}-->
+        <!--a:active {color:#00FF00;}-->
+    <!--</style>-->
 </head>
 
 <body>
@@ -82,7 +82,7 @@
                             <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
                             <!-- AddToAny END -->
 
-                            <a class="btn btn-success" href="cv/kevin_cv.pdf"><span class="fa fa-download"></span>Curriculum Vitae</a>
+                            <a class="btn btn-success" href="cv/kevin_cv.pdf"><span class="fa fa-download"></span> Curriculum Vitae</a>
                         </div>
                     </div>
                     <h2>UI/UX Designer</h2>
