--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="cv-title">
                     <div class="row">
                         <div class="col-sm-7">
-                            <h1>Kevin Ling</h1>
+                            <h1>Kevin Ling(凌恺)</h1>
                         </div>
                         <div class="col-sm-5 text-right dl-share">
                             <!-- AddToAny BEGIN -->
@@ -85,7 +85,7 @@
                             <a class="btn btn-success" href="cv/kevin_cv.pdf"><span class="fa fa-download"></span> Curriculum Vitae</a>
                         </div>
                     </div>
-                    <h2>UI/UX Designer</h2>
+                    <h2>Undergraduated Student in <a href="http://english.hust.edu.cn/">HUST</a> majored in Computer Science</h2>
                 </div><!-- Title end-->
 
                 <!-- ===========================
