--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <p> • Offered an user-friendly way to show handoff configurations of the cells in the area of user interests</p>
                             <p> • Enabled a complete cycle of data collection, analysis and visualization, along with <a href="http://milab.cs.purdue.edu/">MMLab</a></p>
                             <p> • Provided spatial statistics of handoff policies in an area</p>
-                            <p> • Wrote a poster accepted by IMC'18</p>
+                            <p> • Wrote a <a href="poster/Poster-MMMap-v5.pptx">poster</a> accepted by IMC'18</p>
                         </div>
 
                         <div class="year col-md-3">
