--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             <h4>Research Assistant</h4>
                             <p class="sub"><a href="https://mssn.cs.purdue.edu/">MSSN Lab | Purdue</a>
                             </p>
-                            <p class="sub"><a href="https://www.cs.purdue.edu/homes/chunyi/">Advisor: Chunyi Peng, the Assistant Prof., Purdue</a>
+                            <p class="sub">Advisor: <a href="https://www.cs.purdue.edu/homes/chunyi/">Chunyi Peng</a>, the Assistant Prof., Purdue
                             </p>
                             <h5><strong><a href="http://mssn2.cs.purdue.edu/mmmap">Mobility Management Map</a></strong></h5>
                             <p> • Develop an online service to visualize handoff configuration data to better support mobility research</p>
