--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
                 <div class="col-sm-11 col-md-10">
                     <h3 class="mobmid">Technical skills </h3>
 
-                    <p>Photoshop</p>
+                    <p>Programmer</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
-                            <span class="sr-only">65% Complete (success)</span>
+                            <span class="sr-only">80% Complete (success)</span>
                         </div>
                     </div><!--skill end-->
 
@@ -275,23 +275,23 @@
                     <p>Illustrator</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
-                            <span class="sr-only">85% Complete</span>
+                            <span class="sr-only">70% Complete</span>
                         </div>
                     </div><!--skill end-->
 
                     <p>InDesign</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                            <span class="sr-only">60% Complete (warning)</span>
+                            <span class="sr-only">65% Complete (warning)</span>
                         </div>
                     </div><!--skill end-->
 
-                    <p>Flash</p>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-                            <span class="sr-only">30% Complete (danger)</span>
-                        </div>
-                    </div><!--skill end-->
+                    <!--<p>Learn</p>-->
+                    <!--<div class="progress">-->
+                        <!--<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">-->
+                            <!--<span class="sr-only">30% Complete (danger)</span>-->
+                        <!--</div>-->
+                    <!--</div>&lt;!&ndash;skill end&ndash;&gt;-->
                 </div><!--info end-->
             </div><!--tech skills end-->
             
