--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             </p>
                             <p class="sub">Advisor: <a href="https://www.cs.purdue.edu/homes/chunyi/">Chunyi Peng</a>, the Assistant Prof., Purdue
                             </p>
-                            <h5><strong><a href="http://mssn2.cs.purdue.edu/mmmap">Mobility Management Map</a></strong></h5>
+                            <h5><strong>Mobility Management Map.<a href="http://mssn2.cs.purdue.edu/mmmap">Click here</a></strong></h5>
                             <p> • Develop an online service to visualize handoff configuration data to better support mobility research</p>
                             <p> • Offered an user-friendly way to show handoff configurations of the cells in the area of user interests</p>
                             <p> • Enabled a complete cycle of data collection, analysis and visualization, along with <a href="http://milab.cs.purdue.edu/">MMLab</a></p>
