--- a/index.html
+++ b/index.html
@@ -306,17 +306,35 @@
                     <h3>Awards</h3>
 
                     <div class="award">
-                        <h4>Best Designer 2012</h4>
-                        <p class="sub"><a href="">Life View Media Ltd.</a></p>
-                        <p>Studying all aspect of Graphic Design Including Advertising Design, Branding, Copy Exhibition Design, Ilustration.</p>
+                        <h4>National Scholarship (2 out of 120) 2017</h4>
+                        <p class="sub"><a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a></p>
                     </div>
                     <!--1st award end-->
 
                     <div class="award">
-                        <h4>Best Designer 2011</h4>
-                        <p class="sub"><a href="">Alexa Design Solution</a></p>
-                        <p>Studying all aspect of Graphic Design Including Advertising Design, Branding, Copy Exhibition Design, Ilustration, Information Design, Packaging Design and Website Design</p>
-                    </div><!--1st award end-->
+                        <h4>Scholarship for Freshmen (1 out of 120) 2015</h4>
+                        <p class="sub"><a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a></p>
+                    </div><!--2st award end-->
+
+                    <div class="award">
+                        <h4>Model Student of Academic Records (5 out of 120) 2017</h4>
+                        <p class="sub"><a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a></p>
+                    </div><!--3st award end-->
+
+                    <div class="award">
+                        <h4>Awarded Outstanding Student (4 out of 120) 2017</h4>
+                        <p class="sub"><a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a></p>
+                    </div><!--4st award end-->
+
+                    <div class="award">
+                        <h4>First prize in International Art Federation Music Competition 2014</h4>
+                        <p class="sub"><a href="">International Art Federation</a></p>
+                    </div><!--5st award end-->
+
+                    <div class="award">
+                        <h4>First prize at the provincial level in Chinese Mathematical Olympiad in Senior 2014</h4>
+                        <p class="sub"><a href="http://en.moe.gov.cn/">Ministry of Education of the People's Republic of China</a></p>
+                    </div><!--5st award end-->
                 </div><!--awards end-->
 
             </div>
