--- a/index.html
+++ b/index.html
@@ -253,9 +253,52 @@
 
             <hr>
             <!-- ===========================
-                        SELECTED COURSES
-                        ============================ -->
+            SELECTED COURSES
+            ============================ -->
+            <div id="selected_course" class="row mobmid">
+                <div class="col-sm-1">
+                    <span class="secicon fa fa-star"></span>
+                </div><!--icon end-->
 
+                <div class="col-sm-11">
+                    <h3>Selected Courses Projects</h3>
+
+                    <div class="row">
+                        <div class="col-md-9">
+                            <h4>Project Leader</h4>
+                            <p class="sub"><a href="">Course: Software Engineering</a>
+                            </p>
+                            <h5><strong>A Managing System For Reservation To Register Online</strong></h5>
+                            <p> • Built a reservation system to register online in hospitals solely with many functions, following the standards in Software Engineering such as data flow diagram and IPO sheet</p>
+                            <p> • Utilized the structured analysis and OOA to analyse the requirements of the doctors, patients and the managers of the hospital</p>
+                            <p> • Euipped the system with MYSQL database to support large-scale users</p>
+                            <p> • Used the C/C++ to build the system and the code scalability is good</p>
+                            <p> • Concluded 51 pages report to summarize the analysis and proof</p>
+                            <p> • Obtained a high score of 96 in the project evaluation, ranking the Top 3 in all teams</p>
+                        </div>
+
+                        <div class="year col-md-3">
+                            <p>2017.9-2017.11</p>
+                        </div>
+                    </div><!--Course 1 end-->
+                    <hr>
+                    <div class="col-md-9">
+                        <h4>Project Leader</h4>
+                        <p class="sub"><a href="">Course: Computer Organization</a>
+                        </p>
+                        <h5><strong>Multi-period CPU Design Based on Verilog</strong></h5>
+                        <p> • Completed an multi-period CPU based on Verilog with many MIPS instructions solely, such as syscall(display or exit), branch on equal, loading word, adding</p>
+                        <p> • Equipped the CPU with the registers, ALU and the storage system</p>
+                        <p> • Supported the CPU with the pipeline technology</p>
+                        <p> • Gained praises by professors of the course</p>
+                        <p> • Concluded 65 pages report to summarize the analysis and proof</p>
+                    </div>
+
+                    <div class="year col-md-3">
+                        <p>2018.2-2018.5</p>
+                    </div>
+                </div><!--Course 2 end-->
+            </div><!--SELECTED COURSES end-->
         </div><!--left end-->
         
         <!-- ===========================
