--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </div>
 
                         <div class="year col-md-3">
-                            <p>2015.9-present</p>
+                            <p>2015.9-Present</p>
                         </div>
                     </div><!--Education & Certification 1 end-->
 
@@ -299,6 +299,51 @@
                     </div>
                 </div><!--Course 2 end-->
             </div><!--SELECTED COURSES end-->
+
+            <hr>
+
+            <!-- ===========================
+            Leadership
+            ============================ -->
+            <div id="leadership" class="row mobmid">
+                <div class="col-sm-1">
+                    <span class="secicon fa fa-users"></span>
+                </div><!--icon end-->
+
+                <div class="col-sm-11">
+                    <h3>Leadership & Activities</h3>
+
+                    <div class="row">
+                        <div class="col-md-9">
+                            <h4>Vice Monitor</h4>
+                            <p class="sub">General Committee Office in Center of Art Education, HUST
+                            </p>
+                            <p> • Hosted bi-weekly class meetings</p>
+                            <p> • Designed organized more than 10 events and activities, including tours, contests and discussions</p>
+                            <p> • Organized the Excellent League Activity and won the first prize in school (10 out of 70 groups)</p>
+                            <p> • Recognized for the Outstanding Student Leadership in HUST, given to 10 students out of 120</p>
+                        </div>
+
+                        <div class="year col-md-3">
+                            <p>2016.9-2017.9</p>
+                        </div>
+                    </div><!--Activity 1 end-->
+                    <hr>
+                    <div class="col-md-9">
+                        <h4>Piano Pedagogy</h4>
+                        <p class="sub"><a href="">Chorus of HUST</a>
+                        </p>
+                        <p> • performed in more than 20 concerts</p>
+                        <p> • Apraised by many professors including Gregory Wait( the dean of Department of Music in Stanford University)</p>
+                        <p> • Entered national competition finals in University Students Arts Festival</p>
+                        <p> • volunteered in Internet innovation and Entrepreneurship Competition in 2016</p>
+                    </div>
+
+                    <div class="year col-md-3">
+                        <p>2016.9-Present</p>
+                    </div>
+                </div><!--Actitvity 2 end-->
+            </div><!--Leadership end-->
         </div><!--left end-->
         
         <!-- ===========================
