--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="row">
                         <div class="col-md-9">
                             <h4>Project Leader</h4>
-                            <p class="sub"><a href="">Course: Software Engineering</a>
+                            <p class="sub">Course: Software Engineering
                             </p>
                             <h5><strong>A Managing System For Reservation To Register Online</strong></h5>
                             <p> • Built a reservation system to register online in hospitals solely with many functions, following the standards in Software Engineering such as data flow diagram and IPO sheet</p>
@@ -284,7 +284,7 @@
                     <hr>
                     <div class="col-md-9">
                         <h4>Project Leader</h4>
-                        <p class="sub"><a href="">Course: Computer Organization</a>
+                        <p class="sub">Course: Computer Organization
                         </p>
                         <h5><strong>Multi-period CPU Design Based on Verilog</strong></h5>
                         <p> • Completed an multi-period CPU based on Verilog with many MIPS instructions solely, such as syscall(display or exit), branch on equal, loading word, adding</p>
@@ -331,7 +331,7 @@
                     <hr>
                     <div class="col-md-9">
                         <h4>Piano Pedagogy</h4>
-                        <p class="sub"><a href="">Chorus of HUST</a>
+                        <p class="sub">Chorus of HUST
                         </p>
                         <p> • performed in more than 20 concerts</p>
                         <p> • Apraised by many professors including Gregory Wait( the dean of Department of Music in Stanford University)</p>
