--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                         <div class="col-sm-5 text-right dl-share">
                             <!-- AddToAny BEGIN -->
-                            <a class="a2a_dd btn btn-default" href=""><span class="fa fa-share "></span> Share</a>
+                            <a class="a2a_dd btn btn-default" href="#"><span class="fa fa-share "></span> Share</a>
                             <script type="text/javascript">
                                 var a2a_config = a2a_config || {};
                                 a2a_config.linkname = "Minimal CV by EvenFly";
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href=""skype:live:keviniling"><span class="social fa fa-skype"></span>+86 131 0071 0797</a>
+                            <li><a href="skype:live:keviniling"><span class="social fa fa-skype"></span>+86 131 0071 0797</a>
                             </li>
                             <li><a href="mailto:keviniling@outlook.com"><span class="social fa fa-envelope-o"></span>keviniling@outlook.com</a>
                             </li>
@@ -234,7 +234,7 @@
                     <div class="row">
                         <div class="col-md-9">
                             <h4>Research Assistant</h4>
-                            <p class="sub"><a href="">Deep Learning Group | HUST</a>
+                            <p class="sub"><a href="#">Deep Learning Group | HUST</a>
                             </p>
                             <p class="sub">Advisor: Kun He, the Prof., HUST, visiting scholar in Cornell University</p>
                             <h5><strong>A approach to Estimate the Dimension of The Deep Manifold</strong></h5>
