--- a/index.html
+++ b/index.html
@@ -433,12 +433,12 @@
 
             </div>
             
-            <hr>
+            <!--<hr>-->
 
-            <div class="row ">
-                <div class="col-sm-1 col-md-2 mobmid">
-                    <span class="secicon fa fa-quote-left"></span>
-                </div><!--icon end-->
+            <!--<div class="row ">-->
+                <!--<div class="col-sm-1 col-md-2 mobmid">-->
+                    <!--<span class="secicon fa fa-quote-left"></span>-->
+                <!--</div>&lt;!&ndash;icon end&ndash;&gt;-->
 
                 <!--<div class="col-sm-11 col-md-10 testimonials">-->
                     <!--<h3 class="mobmid">Testimonials </h3>-->
@@ -470,7 +470,7 @@
                         <!--<p>The Cute Huzur</p>-->
                     <!--</div>&lt;!&ndash;3rd testimonial end&ndash;&gt;-->
                 <!--</div>&lt;!&ndash;testimonials end&ndash;&gt;-->
-            </div><!--tech skills end-->
+            <!--</div>&lt;!&ndash;tech skills end&ndash;&gt;-->
         </div><!--right end-->
     </div><!--container end-->
 
