--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
                             <!-- AddToAny END -->
 
-                            <a class="btn btn-success" href="cv/kevin_cv.pdf"><span class="fa fa-download"></span> Curriculum Vitae</a>
+                            <a class="btn btn-success" href="cv/kai_cv.pdf"><span class="fa fa-download"></span> Curriculum Vitae</a>
                         </div>
                     </div>
                     <h2>Undergraduated Student in <a href="http://english.hust.edu.cn/">HUST</a> majored in Computer Science</h2>
