--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <p class="sub"><a href="#">Deep Learning Group | HUST</a>
                             </p>
                             <p class="sub">Advisor: Kun He, the Prof., HUST, visiting scholar in Cornell University</p>
-                            <h5><strong>A approach to Estimate the Dimension of The Deep Manifold</strong></h5>
+                            <h5><strong>A Method to Evaluate the Dimension of The Deep Manifold</strong></h5>
                             <p> • Observed the dramatic drop for the singular values of the fully connected layers or a single feature map of the convolutional layer</p>
                             <p> • Proposed a singular value decomposition (SVD) based approach to estimate the dimension of the deep manifolds for a typical convolutional neural network</p>
                             <p> • Discovered that the dimensions of different categories are close to each other and decline quickly along the convolutional layers and fully connected layers</p>
