--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href="skype:live:keviniling"><span class="social fa fa-skype"></span>+86 131 0071 0797</a>
+                            <li><a href="skype:live:keviniling"><span class="social fa fa-skype"></span>+1 (765) 714 5263 </a>
                             </li>
                             <li><a href="mailto:keviniling@outlook.com"><span class="social fa fa-envelope-o"></span>keviniling@outlook.com</a>
                             </li>
@@ -150,6 +150,22 @@
 
                 <div class="col-sm-11">
                     <h3>Education &amp; Certification</h3>
+                    
+                    <div class="row">
+                        <div class="col-md-9">
+                            <h4>Ph.D student in CS</h4>
+                            <p class="sub"><a href="">Purdue University</a>
+                            </p>
+                            <p>Studying all aspect of Mobile Computing</p>
+                            <p>Especially in security and IoT connected with cellular</p>
+                        </div>
+
+                        <div class="year col-md-3">
+                            <p>2019.8-present</p>
+                        </div>
+                    </div>&lt;!&ndash;Education & Certification 1 end&ndash;&gt;
+
+                    <hr>
 
                     <div class="row">
                         <div class="col-md-9">
@@ -160,24 +176,9 @@
                         </div>
 
                         <div class="year col-md-3">
-                            <p>2015.9-Present</p>
+                            <p>2015.9-2019.6</p>
                         </div>
-                    </div><!--Education & Certification 1 end-->
-
-                    <!--<hr>-->
-
-                    <!--<div class="row">-->
-                        <!--<div class="col-md-9">-->
-                            <!--<h4>BSc in Graphic Design</h4>-->
-                            <!--<p class="sub"><a href="">Ideal Institute of Science and Technology</a>-->
-                            <!--</p>-->
-                            <!--<p>Studying all aspect of Graphic Design Including Advertising Design, Branding, Copy Exhibition Design, Ilustration, Information Design, Packaging Design and Website Design</p>-->
-                        <!--</div>-->
-
-                        <!--<div class="year col-md-3">-->
-                            <!--<p>2006-2009</p>-->
-                        <!--</div>-->
-                    <!--</div>&lt;!&ndash;Education & Certification 2 end&ndash;&gt;-->
+                    </div><!--Education & Certification 2 end-->
 
                     <!--<hr>-->
 
