--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="year col-md-3">
                             <p>2019.8-present</p>
                         </div>
-                    </div><!-- &lt;!&ndash;Education & Certification 1 end&ndash;&gt; -->
+                    </div><!-- Education & Certification 1 end -->
 
                     <hr>
 
