--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="row">
                         <div class="col-md-9">
                             <h4>Ph.D student in CS</h4>
-                            <p class="sub"><a href="">Purdue University</a>
+                            <p class="sub"><a href="https://www.purdue.edu/">Purdue University</a>
                             </p>
                             <p>Studying all aspect of Mobile Computing</p>
                             <p>Especially in security and IoT connected with cellular</p>
