--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <p class="sub"><a href="https://www.purdue.edu/">Purdue University</a>
                             </p>
                             <p>Studying all aspect of Mobile Computing</p>
-                            <p>Especially in security and IoT connected with cellular</p>
+                            <p>Especially in delay, security and IoT connected with cellular</p>
                         </div>
 
                         <div class="year col-md-3">
@@ -232,22 +232,7 @@
                     
                     <hr>
 
-                    <div class="row">
-                        <div class="col-md-9">
-                            <h4>Research Assistant</h4>
-                            <p class="sub"><a href="#">Deep Learning Group | HUST</a>
-                            </p>
-                            <p class="sub">Advisor: Kun He, the Prof., HUST, visiting scholar in Cornell University</p>
-                            <h5><strong>A Method to Evaluate the Dimension of The Deep Manifold</strong></h5>
-                            <p> • Observed the dramatic drop for the singular values of the fully connected layers or a single feature map of the convolutional layer</p>
-                            <p> • Proposed a singular value decomposition (SVD) based approach to estimate the dimension of the deep manifolds for a typical convolutional neural network</p>
-                            <p> • Discovered that the dimensions of different categories are close to each other and decline quickly along the convolutional layers and fully connected layers</p>
-                        </div>
-
-                        <div class="year col-md-3">
-                            <p>2017.7-2017.11</p>
-                        </div>
-                    </div><!--Research 2 end-->
+                    
 
                 </div><!--Research experiences end-->
             </div><!--Research experiences end-->
