--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="cv-title">
                     <div class="row">
                         <div class="col-sm-7">
-                            <h1>Kevin Ling(凌恺)</h1>
+                            <h1>Kai Ling(凌恺)</h1>
                         </div>
                         <div class="col-sm-5 text-right dl-share">
                             <!-- AddToAny BEGIN -->
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <ul class="list-unstyled">
-                            <li><a href="skype:live:keviniling"><span class="social fa fa-skype"></span>+1 (765) 714 5263 </a>
+                            <li><a href="skype:live:keviniling"><span class="social fa fa-skype"></span>+1 (765) 586 8733 </a>
                             </li>
                             <li><a href="mailto:keviniling@outlook.com"><span class="social fa fa-envelope-o"></span>keviniling@outlook.com</a>
                             </li>
@@ -135,9 +135,9 @@
 
                 <div class="col-sm-11">
                     <h3>Personal statement </h3>
-                    <p>I am currently a junior student at Huazhong University of Science and Technology, Wuhan, China. I am currently pursuing a degree in Computer Science. Throughout my undergraduate career, I have diligently devoted myself to these two areas of study and earned an overall GPA of 3.8 according to my college scoring system. I chase for the perfect both in looking and function in my projects. </p>
+                    <p>I am currently a second-year CS PhD student at Purdue University. My research interest is in Mobile network, especially in IoT security, 5G mobility support. </p>
                     <p>I am also an "amateur" piano soloist. I am the piano soloist in Symphony Orchestra of HUST and the piano pedagogy in Chorus of HUST.</p>
-                    <p class="signature">Kevin Ling</p>
+                    <p class="signature">Kai Ling</p>
                 </div><!--info end-->
             </div><!--personal statement end-->
 
@@ -229,12 +229,29 @@
                             <p>2018.7-2018.11</p>
                         </div>
                     </div><!--Research 1 end-->
-                    
+                    <hr>
+                    <div class="col-md-9">
+                            <h4>Research Assistant</h4>
+                            <p class="sub"><a href="https://mssn.cs.purdue.edu/">MSSN Lab | Purdue</a>
+                            </p>
+                            <p class="sub">Advisor: <a href="https://www.cs.purdue.edu/homes/chunyi/">Chunyi Peng</a>, the Assistant Prof., Purdue
+                            </p>
+                            <h5><strong>Cellular-Connected UAVs measurement Project.</strong></h5>
+                            <p> • Conducted the first city-scale what-if study to examine feasibility and potential issues of flying UAVs over the existing cellular networks</p>
+                            <p> • Ran extensive flying measurements (45 hour, 1010 km) over representative(urban, suburban, rural) regions in the metropolitan area</p>
+                            <p> • Compared data performance and mobility support on the fly and on the drive, and quantitatively assess how latency and failures vary when LTE extends its support from the ground to the sky with deep RAN analysis in RAN layers’ data traces</p>
+                            <p> • Made several new findings and gained insights to improve performance and even the roll-out of cellular-operated UAVs</p>
+                        </div>
+
+                        <div class="year col-md-3">
+                            <p>2020.7-2020.11</p>
+                        </div>
+                    </div><!--Research 2 end-->
                     <hr>
 
                     
 
-                </div><!--Research experiences end-->
+                <!-- </div>Research experiences end -->
             </div><!--Research experiences end-->
 
             <hr>
