--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="col-sm-11">
                     <h3>Personal statement </h3>
                     <p>I am currently a second-year CS PhD student at Purdue University. My research interest is in Mobile network, especially in IoT security, 5G mobility support. </p>
-                    <p>I am also an "amateur" piano soloist. I am the piano soloist in Symphony Orchestra of HUST and the piano pedagogy in Chorus of HUST.</p>
+                    <p>I am also an "amateur" piano soloist. I was the piano soloist in Symphony Orchestra of HUST and the piano pedagogy in Chorus of HUST.</p>
                     <p class="signature">Kai Ling</p>
                 </div><!--info end-->
             </div><!--personal statement end-->
