--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <a class="btn btn-success" href="cv/kai_cv.pdf"><span class="fa fa-download"></span> Curriculum Vitae</a>
                         </div>
                     </div>
-                    <h2>Undergraduated Student in <a href="http://english.hust.edu.cn/">HUST</a> majored in Computer Science</h2>
+                    <h2>CS PhD Student in <a href="https://www.purdue.edu/">Purdue University</a></h2>
                 </div><!-- Title end-->
 
                 <!-- ===========================
