--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                 <div class="col-sm-11">
                     <h3>Personal statement </h3>
-                    <p>I am currently a second-year CS PhD student at Purdue University. My research interest is in Mobile network, especially in IoT security, 5G mobility support. </p>
+                    <p>I am currently a CS PhD student at Purdue University. My research interest is in Computational Biology, especially in protein structure prediction and structure modeling. </p>
                     <p>I am also an "amateur" piano soloist. I was the piano soloist in Symphony Orchestra of HUST and the piano pedagogy in Chorus of HUST.</p>
                     <p class="signature">Kai Ling</p>
                 </div><!--info end-->
@@ -213,95 +213,25 @@
                     <div class="row">
                         <div class="col-md-9">
                             <h4>Research Assistant</h4>
-                            <p class="sub"><a href="https://mssn.cs.purdue.edu/">MSSN Lab | Purdue</a>
+                            <p class="sub"><a href="https://www.kiharalab.org/">Kihara Computational Biology Lab | Purdue</a>
                             </p>
-                            <p class="sub">Advisor: <a href="https://www.cs.purdue.edu/homes/chunyi/">Chunyi Peng</a>, the Assistant Prof., Purdue
+                            <p class="sub">Advisor: <a href="https://www.kiharalab.org/contact.php">Daisuke Kihara</a>, Professor of Biological Sciences and Computer Science, Purdue
                             </p>
-                            <h5><strong>Mobility Management Map.<a href="http://mssn2.cs.purdue.edu/mmmap">Click here</a></strong></h5>
-                            <p> • Develop an online service to visualize handoff configuration data to better support mobility research</p>
-                            <p> • Offered an user-friendly way to show handoff configurations of the cells in the area of user interests</p>
-                            <p> • Enabled a complete cycle of data collection, analysis and visualization, along with <a href="http://milab.cs.purdue.edu/">MMLab</a></p>
-                            <p> • Provided spatial statistics of handoff policies in an area</p>
-                            <p> • Wrote a <a href="poster/Poster-MMMap-v5.pptx">poster</a> accepted by IMC'18</p>
+                            <h5><strong>Protein Structure Prediction and Modeling</strong></h5>
+                            <p> • Developing computational methods for protein structure prediction using deep learning techniques</p>
+                            <p> • Implementing algorithms for protein structure refinement and validation</p>
+                            <p> • Working on protein-protein interaction modeling and interface prediction</p>
+                            <p> • Analyzing large-scale protein structural data for pattern recognition and classification</p>
                         </div>
 
                         <div class="year col-md-3">
-                            <p>2018.7-2018.11</p>
+                            <p>2019.8-present</p>
                         </div>
                     </div><!--Research 1 end-->
-                    <hr>
-                    <div class="col-md-9">
-                            <h4>Research Assistant</h4>
-                            <p class="sub"><a href="https://mssn.cs.purdue.edu/">MSSN Lab | Purdue</a>
-                            </p>
-                            <p class="sub">Advisor: <a href="https://www.cs.purdue.edu/homes/chunyi/">Chunyi Peng</a>, the Assistant Prof., Purdue
-                            </p>
-                            <h5><strong>Cellular-Connected UAVs measurement Project.</strong></h5>
-                            <p> • Conducted the first city-scale what-if study to examine feasibility and potential issues of flying UAVs over the existing cellular networks</p>
-                            <p> • Ran extensive flying measurements (45 hour, 1010 km) over representative(urban, suburban, rural) regions in the metropolitan area</p>
-                            <p> • Compared data performance and mobility support on the fly and on the drive, and quantitatively assess how latency and failures vary when LTE extends its support from the ground to the sky with deep RAN analysis in RAN layers’ data traces</p>
-                            <p> • Made several new findings and gained insights to improve performance and even the roll-out of cellular-operated UAVs</p>
-                        </div>
-
-                        <div class="year col-md-3">
-                            <p>2020.7-2020.11</p>
-                        </div>
-                    </div><!--Research 2 end-->
-                    <hr>
-
-                    
-
+                
                 <!-- </div>Research experiences end -->
+                </div>
             </div><!--Research experiences end-->
-
-            <hr>
-            <!-- ===========================
-            SELECTED COURSES
-            ============================ -->
-            <div id="selected_course" class="row mobmid">
-                <div class="col-sm-1">
-                    <span class="secicon fa fa-star"></span>
-                </div><!--icon end-->
-
-                <div class="col-sm-11">
-                    <h3>Selected Courses Projects</h3>
-
-                    <div class="row">
-                        <div class="col-md-9">
-                            <h4>Project Leader</h4>
-                            <p class="sub">Course: Software Engineering
-                            </p>
-                            <h5><strong>A Managing System For Reservation To Register Online</strong></h5>
-                            <p> • Built a reservation system to register online in hospitals solely with many functions, following the standards in Software Engineering such as data flow diagram and IPO sheet</p>
-                            <p> • Utilized the structured analysis and OOA to analyse the requirements of the doctors, patients and the managers of the hospital</p>
-                            <p> • Euipped the system with MYSQL database to support large-scale users</p>
-                            <p> • Used the C/C++ to build the system and the code scalability is good</p>
-                            <p> • Concluded 51 pages report to summarize the analysis and proof</p>
-                            <p> • Obtained a high score of 96 in the project evaluation, ranking the Top 3 in all teams</p>
-                        </div>
-
-                        <div class="year col-md-3">
-                            <p>2017.9-2017.11</p>
-                        </div>
-                    </div><!--Course 1 end-->
-                    <hr>
-                    <div class="col-md-9">
-                        <h4>Project Leader</h4>
-                        <p class="sub">Course: Computer Organization
-                        </p>
-                        <h5><strong>Multi-period CPU Design Based on Verilog</strong></h5>
-                        <p> • Completed an multi-period CPU based on Verilog with many MIPS instructions solely, such as syscall(display or exit), branch on equal, loading word, adding</p>
-                        <p> • Equipped the CPU with the registers, ALU and the storage system</p>
-                        <p> • Supported the CPU with the pipeline technology</p>
-                        <p> • Gained praises by professors of the course</p>
-                        <p> • Concluded 65 pages report to summarize the analysis and proof</p>
-                    </div>
-
-                    <div class="year col-md-3">
-                        <p>2018.2-2018.5</p>
-                    </div>
-                </div><!--Course 2 end-->
-            </div><!--SELECTED COURSES end-->
 
             <hr>
 
