--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                 <div class="col-sm-11">
                     <h3>Personal statement </h3>
-                    <p>I am currently a CS PhD student from the Department of Computer Science of <a href="https://www.purdue.edu/">Purdue University</a> under the supervision of Prof. <a href="https://www.kiharalab.org/contact.php">Daisuke Kihara</a>. My research interest is in Computational Biology, especially in protein structure prediction and structure modeling. </p>
+                    <p>I am currently a CS PhD student from the Department of Computer Science of <a href="https://www.purdue.edu/">Purdue University</a> under the supervision of Prof. <a href="https://kiharalab.org/web/dkihara/">Daisuke Kihara</a>. My research interest is in Computational Biology, especially in protein structure prediction and structure modeling. </p>
                     <p>I am also an "amateur" piano soloist. I was the piano soloist in Symphony Orchestra of HUST and the piano pedagogy in Chorus of HUST.</p>
                     <p class="signature">Kai Ling</p>
                 </div><!--info end-->
@@ -213,9 +213,9 @@
                     <div class="row">
                         <div class="col-md-9">
                             <h4>Research Assistant</h4>
-                            <p class="sub"><a href="https://www.kiharalab.org/">Kihara Computational Biology Lab | Purdue</a>
+                            <p class="sub"><a href="https://kiharalab.org/">Kihara Computational Biology Lab | Purdue</a>
                             </p>
-                            <p class="sub">Advisor: <a href="https://www.kiharalab.org/contact.php">Daisuke Kihara</a>, Professor of Biological Sciences and Computer Science, Purdue
+                            <p class="sub">Advisor: <a href="https://kiharalab.org/web/dkihara/">Daisuke Kihara</a>, Professor of Biological Sciences and Computer Science, Purdue
                             </p>
                             
                             <h5><strong>Distance-AF Multimer Project</strong> (Project Leader)</h5>
@@ -234,7 +234,7 @@
         
                     <div class="row">
                         <div class="col-md-9">
-                            <h5><strong>Daq Refine Web Tool Project</strong> (Project Leader)</h5>
+                            <h5><strong><a href="https://em.kiharalab.org/algorithm/daq-refine"></a>Daq Refine Web Tool Project</a></strong> (Project Leader)</h5>
                             <p> • Built a full-stack web application for refining protein models from cryo-EM data using React.js frontend and Python/Flask backend</p>
                             <p> • Designed and implemented RESTful APIs that handle complex multi-chain protein models with up to 50,000 atoms</p>
                             <p> • Deployed application on AWS using Docker containers and implemented CI/CD pipeline for automated testing and deployment</p>
