--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <ul class="list-unstyled">
                             <li><a href="skype:live:keviniling"><span class="social fa fa-skype"></span>+1 (765) 586 8733 </a>
                             </li>
-                            <li><a href="mailto:keviniling@outlook.com"><span class="social fa fa-envelope-o"></span>keviniling@outlook.com</a>
+                            <li><a href="mailto:ling59@purdue.edu"><span class="social fa fa-envelope-o"></span>ling59@purdue.edu</a>
                             </li>
                         </ul>
                     </div><!-- social 1st col end-->
