--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <ul class="list-unstyled">
                             <li><a href="https://www.instagram.com/keviniling/"><span class="social fa fa-instagram"></span>Instagram</a>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/kevin-ling-540629117/"><span class="social fa fa-linkedin"></span>Linkedin</a>
+                            <li><a href="https://linkedin.com/in/kai-ling-540629117/"><span class="social fa fa-linkedin"></span>Linkedin</a>
                             </li>
                         </ul>
                     </div><!-- social 3rd col end-->
