--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- ===========================
     SITE TITLE
     =========================== -->
-    <title>Welcome to Kevin Ling's homepage</title>
+    <title>Welcome to Kai Ling's homepage</title>
 
     <!-- ===========================
     FAVICONS
